-Enabled view chaching for Silverlight.
-Fixed some bugs in the LOB samples.
-Added Hyperlink/HyerlinkButton element defaults.
-Update StructureMap to version 2.6.1.
-Updated Windsor to version 2.1.1.
-Added official support for .NET 4.0.
-Fixed a bug in MultiPresenterManager for .NET 4.0.
-Updated to MEF Preview 9.

V1.1 Release Candidate
-Added pre-initialization hooks to CaliburnApplication via Marco Amendola's patch.
-Redesign of IThreadPool.  AsynchronousAction will now pass itself as state when enqueing the background task.
-Closed ticket #4672 by making PropertyChangedBase.PropertyChanged virtual.
-Applied jagregory's patch to add single key gestures to WPF and Caliburn.
-Applied marcoamendola's patch for enabling property path syntax with Preview and Dependency attributes. So you can now do things like [Dependencies("Model.IsValid")].
-Applied marcoamendola's patch enabling type hinting for polymorphic databinding in Caliburn.Testability.
-Applied etobi's patch to greatly improve Caliburn's parameter parsing in ActionMessages and CommandMessages. See http://caliburn.codeplex.com/WorkItem/View.aspx?WorkItemId=4644 for an explanation.
-Closed ticket #4826. DefaultWindowManager now sets WindowStartupLocation to CenterOwner for UserControls hosted in windows. Title was enhanced to databind to IPresenter.DisplayName if model implements this interface.
-Closed ticket #4833. Fixed an issue with ViewMetadata and invalid Windows in DefaultViewStrategy.
-Fixed a bug with DefaultWindowManager which caused errors when creating main windows from a user control.
-Improved the flexibility of the DefaultViewStrategy. It no longer requires separate namespaces for ViewModels/Views.
-Closed ticket #4865. Fixed a bug in MultiPresenterManager which affects multiple presenter shutdown.
-Applied sedovav's fix to the Spring adapter.
-Enhanced DefaultViewStrategy's exception to report searched for types when view location fails.