@@ -60,6 +60,7 @@ V1.1 Release
 -Added official support for .NET 4.0.
 -Fixed a bug in MultiPresenterManager for .NET 4.0.
 -Updated to MEF Preview 9.
+-Applied a patch from Adam Connelly to add AddRange to BindableCollection and IObservableCollection.
 
 V1.1 Release Candidate
 -Added pre-initialization hooks to CaliburnApplication via Marco Amendola's patch.
